<resources>
    <string name="app_name">Cadiz\'s Trails</string>
    <string name="title_senderos">Walking trails</string>
    <string name="title_mis_sitios">My places</string>
    <string name="title_favoritos">Favorites</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="sitios_popup_title_insert_edit">Add place</string>
    <string name="sitios_popup_title_delete">Delete place</string>
    <string name="pista_sitio">Place name</string>
    <string name="pista_description">Description</string>
    <string name="save">Save</string>
    <string name="distancia">Distance:</string>
    <string name="localidad">City:</string>
    <string name="n_senderos">Nº of trails:</string>
    <string name="descripcion">Description</string>
    <string name="tiempo_actual_en_la_zona">Actually weather</string>
    <string name="temperatura">Temperature:</string>
    <string name="viento">Wind:</string>
    <string name="humedad">Humidity:</string>
    <string name="ocaso">Sunset:</string>
    <string name="duracion">Duration:</string>
    <string name="dificultad">Level:</string>
    <string name="tipo">Style:</string>
    <string name="senializado">Signposted:</string>
    <string name="cota_max">Máx. altitude:</string>
    <string name="cota_min">Min. altitude:</string>
    <string name="permiso">Permission:</string>
    <string name="titulo">Tittle</string>
    <string name="more_info">MORE INFO...</string>
    <string name="de">of</string>
    <string name="AlbumPhotos">Photo Album</string>
    <string name="pista_city">City</string>
    <string name="site_added">Site added</string>
    <string name="site_add_error">Error adding site</string>
    <string name="site_updated">Site updated</string>
    <string name="site_update_error">Error updating site</string>
    <string name="site_delete_error">Error deleting site</string>
    <string name="site_deleted">Site deleted</string>
    <string name="image_delete_error">Error deleting image</string>
    <string name="image_deleted">Image deleted</string>
    <string name="image_added">Image added</string>
    <string name="image_add_error">Error adding image</string>
    <string name="sendero_add_error">Error adding trail</string>
    <string name="sendero_added">Trail added</string>
    <string name="sendero_delete_error">Error deleting trail</string>
    <string name="sendero_deleted">Trail deleted</string>
    <string name="search_by_city">Search by city...</string>
</resources>
